Populate HTML with dummy content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,68 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Upper Section -->
+     <section class="hero">
+        <div class="hero-photo-card">
+            <img src="https://placeholder.com/image" alt="Professional headshot">
+        </div>
+        <div class="hero-text-card">
+            <h1>Ashley Williams</h1>
+            <h2>About me</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <div class="hero-icons">
+                <span>X</span>
+                <span>X</span>
+                <span>X</span>
+            </div>
+        </div>
+     </section>
+
+     <!-- Middle Section -->
+      <section class="my-work">
+        <h2>My work</h2>
+        <div class="work-grid">
+            <div class="work-card">
+                <div class="work-image">screenshot of project</div>
+                <div class="work-info">
+                    <h3>Project name</h3>
+                    <p>Short description of the project. Just a couple sentences will do.</p>
+                    <div class="work-icons">
+                        <span>X</span>
+                        <span>X</span>
+                    </div>
+                </div>
+            </div>
+            <!-- Remaining work cards -->
+            <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>X</span><span>X</span></div></div></div>
+            <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>X</span><span>X</span></div></div></div>
+            <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>X</span><span>X</span></div></div></div>
+            <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>X</span><span>X</span></div></div></div>
+            <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>X</span><span>X</span></div></div></div>
+        </div>
+      </section>
+
+      <!-- Bottom section -->
+      <section class="contact">
+        <div class="contact-info">
+            <h2>Contact me</h2>
+            <p>Please get in touch if you think our work could be mutually beneficial!</p>
+            <p>1234 Random Road</p>
+            <p>Random Town, California, 12345</p>
+            <div class="contact-icons">
+                <p>X 555-555-5555</p>
+                <p>X ashleywilliams.is.not.real@gmail.com</p>
+            </div>
+            <div class="social-icons">
+                <span>X</span>
+                <span>X</span>
+                <span>X</span>
+            </div>
+        </div>
+        <div class="contact-photo">
+            <img src="https://placeholder.com/image" alt="Ashley working">
+        </div>
+      </section>
     
 </body>
 </html>
