--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Upper Section -->
      <section class="hero">
         <div class="hero-photo-card">
-            <img src="https://placeholder.com/image" alt="Professional headshot">
+            <img src="images/ashley_one.jpg" alt="Professional headshot">
         </div>
         <div class="hero-text-card">
             <h1>Ashley Williams</h1>
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="contact-photo">
-            <img src="https://placeholder.com/image" alt="Ashley working">
+            <img src="images/ashley_two.jpg" alt="Ashley working">
         </div>
       </section>
     
