Move text into first image and style

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
      <section class="hero">
         <div class="hero-photo-card">
             <img src="images/ashley_one.jpg" alt="Professional headshot">
+            <h1>Ashley<br>Williams</h1>
         </div>
         <div class="hero-text-card">
-            <h1>Ashley Williams</h1>
             <h2>About me</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <div class="hero-icons">
