Add social media icons and svg icons to folder

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+<link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+<link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
 </head>
 <body>
     <!-- Upper Section -->
@@ -20,9 +23,15 @@
             <h2>About me</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <div class="hero-icons">
-                <span>X</span>
-                <span>X</span>
-                <span>X</span>
+                <span>
+                    <i class="devicon-github-original"></i>
+                  </span>
+                <span>
+                    <i class="devicon-linkedin-plain"></i>
+                  </span>
+                <span>
+                    <i class="devicon-facebook-plain"></i>
+                  </span>
             </div>
         </div>
      </section>
@@ -37,17 +46,29 @@
                     <h3>Project name</h3>
                     <p>Short description of the project. Just a couple sentences will do.</p>
                     <div class="work-icons">
-                        <span>X</span>
+                        <span>
+                            <i class="devicon-github-original"></i>
+                          </span>
                         <span>X</span>
                     </div>
                 </div>
             </div>
             <!-- Remaining work cards -->
-            <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>X</span><span>X</span></div></div></div>
-            <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>X</span><span>X</span></div></div></div>
-            <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>X</span><span>X</span></div></div></div>
-            <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>X</span><span>X</span></div></div></div>
-            <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>X</span><span>X</span></div></div></div>
+            <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>
+                <i class="devicon-github-original"></i>
+              </span><span>X</span></div></div></div>
+            <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>
+                <i class="devicon-github-original"></i>
+              </span><span>X</span></div></div></div>
+            <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>
+                <i class="devicon-github-original"></i>
+              </span><span>X</span></div></div></div>
+            <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>
+                <i class="devicon-github-original"></i>
+              </span><span>X</span></div></div></div>
+            <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>
+                <i class="devicon-github-original"></i>
+              </span><span>X</span></div></div></div>
         </div>
       </section>
 
@@ -63,9 +84,15 @@
                 <p>X ashleywilliams.is.not.real@gmail.com</p>
             </div>
             <div class="social-icons">
-                <span>X</span>
-                <span>X</span>
-                <span>X</span>
+                <span>
+                    <i class="devicon-github-original"></i>
+                  </span>
+                <span>
+                    <i class="devicon-linkedin-plain"></i>
+                  </span>
+                <span>
+                    <i class="devicon-facebook-plain"></i>
+                  </span>
             </div>
         </div>
       </section>
