Add open in new icons

--- a/index.html
+++ b/index.html
@@ -49,26 +49,26 @@
                         <span>
                             <i class="devicon-github-original"></i>
                           </span>
-                        <span>X</span>
+                        <span><img src="/icons/open-in-new.svg"></span>
                     </div>
                 </div>
             </div>
             <!-- Remaining work cards -->
             <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>
                 <i class="devicon-github-original"></i>
-              </span><span>X</span></div></div></div>
+              </span><span><img src="/icons/open-in-new.svg"></span></div></div></div>
             <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>
                 <i class="devicon-github-original"></i>
-              </span><span>X</span></div></div></div>
+              </span><span><img src="/icons/open-in-new.svg"></span></div></div></div>
             <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>
                 <i class="devicon-github-original"></i>
-              </span><span>X</span></div></div></div>
+              </span><span><img src="/icons/open-in-new.svg"></span></div></div></div>
             <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>
                 <i class="devicon-github-original"></i>
-              </span><span>X</span></div></div></div>
+              </span><span><img src="/icons/open-in-new.svg"></span></div></div></div>
             <div class="work-card"><div class="work-image">screenshot of project</div><div class="work-info"><h3>Project name</h3><p>Short description of the project. Just a couple sentences will do.</p><div class="work-icons"><span>
                 <i class="devicon-github-original"></i>
-              </span><span>X</span></div></div></div>
+              </span><span><img src="/icons/open-in-new.svg"></span></div></div></div>
         </div>
       </section>
 
