Add gradient colour to upper section

--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
 </head>
 <body>
     <!-- Upper Section -->
-     <section class="hero">
+    <div class="hero-background-container">
+      <div class="hero-gradient-wrapper"></div>
+      <div class="hero-diagonal-overlay"></div>
+      <section class="hero">
         <div class="hero-photo-card">
-            <img src="images/ashley_one.jpg" alt="Professional headshot">
-            <h1>Ashley<br>Williams</h1>
+          <img src="images/ashley_one.jpg" alt="Professional headshot">
+          <h1>Ashley<br>Williams</h1>
         </div>
         <div class="hero-text-card">
-            <h2>About me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <div class="hero-icons">
-                <span>
-                    <i class="devicon-github-original"></i>
-                  </span>
-                <span>
-                    <i class="devicon-linkedin-plain"></i>
-                  </span>
-                <span>
-                    <i class="devicon-facebook-plain"></i>
-                  </span>
-            </div>
+          <h2>About me</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <div class="hero-icons">
+            <span><i class="devicon-github-original"></i></span>
+            <span><i class="devicon-linkedin-plain"></i></span>
+            <span><i class="devicon-facebook-plain"></i></span>
+          </div>
         </div>
-     </section>
+      </section>
+    </div>
+    
+    
 
      <!-- Middle Section -->
       <section class="my-work">
