Remove icons from contact section

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
             <p>1234 Random Road</p>
             <p>Random Town, California, 12345</p>
             <div class="contact-icons">
-                <p>X 555-555-5555</p>
-                <p>X ashleywilliams.is.not.real@gmail.com</p>
+                <p>555-555-5555</p>
+                <p>ashleywilliams.is.not.real@gmail.com</p>
             </div>
             <div class="social-icons">
                 <span>
