Style social icons and change Facebook to X

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="hero-icons">
             <span><i class="devicon-github-original"></i></span>
             <span><i class="devicon-linkedin-plain"></i></span>
-            <span><i class="devicon-facebook-plain"></i></span>
+            <span><i class="devicon-twitter-plain"></i></span>
           </div>
         </div>
       </section>
@@ -149,7 +149,7 @@
                     <i class="devicon-linkedin-plain"></i>
                   </span>
                 <span>
-                    <i class="devicon-facebook-plain"></i>
+                    <i class="devicon-twitter-plain"></i>
                   </span>
             </div>
         </div>
