--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
           <h1>Ashley<br>Williams</h1>
         </div>
         <div class="hero-text-card">
-          <h2>About me</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cilium dolore eu fugiat nulla pariatur.</p>
+          <div class="hero-text-card-content">
+            <h2>About me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temper incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cilium dolore eu fugiat nulla pariatur.</p>
+          </div>
           <div class="hero-icons">
             <span><i class="devicon-github-original"></i></span>
             <span><i class="devicon-linkedin-plain"></i></span>
