--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section class="hero">
         <div class="hero-photo-card">
           <img src="images/ashley_one.jpg" alt="Professional headshot">
-          <h1>Ashley<br>Williams</h1>
+          <h1>Ashley Williams</h1>
         </div>
         <div class="hero-text-card">
           <div class="hero-text-card-content">
