--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
      <!-- Middle Section -->
      <section class="my-work">
-      <div class="my work container">
+      <div class="my-work-container">
         <h2>My work</h2>
         <div class="work-grid">
       
