--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <h3>Project name</h3>
                 <div class="work-icons">
                   <span><i class="devicon-github-original"></i></span>
-                  <span><img src="/icons/open-in-new.svg" alt="Open project"></span>
+                  <span><img src="icons/open-in-new.svg" alt="Open project"></span>
                 </div>
               </div>
               <p>Short description of the project. Just a couple sentences will do.</p>
