--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h3>Project name</h3>
                 <div class="work-icons">
                   <span><i class="devicon-github-original"></i></span>
-                  <span><img src="/icons/open-in-new.svg" alt="Open project"></span>
+                  <span><img src="icons/open-in-new.svg" alt="Open project"></span>
                 </div>
               </div>
               <p>Short description of the project. Just a couple sentences will do.</p>
@@ -80,7 +80,7 @@
                 <h3>Project name</h3>
                 <div class="work-icons">
                   <span><i class="devicon-github-original"></i></span>
-                  <span><img src="/icons/open-in-new.svg" alt="Open project"></span>
+                  <span><img src="icons/open-in-new.svg" alt="Open project"></span>
                 </div>
               </div>
               <p>Short description of the project. Just a couple sentences will do.</p>
@@ -94,7 +94,7 @@
                 <h3>Project name</h3>
                 <div class="work-icons">
                   <span><i class="devicon-github-original"></i></span>
-                  <span><img src="/icons/open-in-new.svg" alt="Open project"></span>
+                  <span><img src="icons/open-in-new.svg" alt="Open project"></span>
                 </div>
               </div>
               <p>Short description of the project. Just a couple sentences will do.</p>
@@ -108,7 +108,7 @@
                 <h3>Project name</h3>
                 <div class="work-icons">
                   <span><i class="devicon-github-original"></i></span>
-                  <span><img src="/icons/open-in-new.svg" alt="Open project"></span>
+                  <span><img src="icons/open-in-new.svg" alt="Open project"></span>
                 </div>
               </div>
               <p>Short description of the project. Just a couple sentences will do.</p>
@@ -122,7 +122,7 @@
                 <h3>Project name</h3>
                 <div class="work-icons">
                   <span><i class="devicon-github-original"></i></span>
-                  <span><img src="/icons/open-in-new.svg" alt="Open project"></span>
+                  <span><img src="icons/open-in-new.svg" alt="Open project"></span>
                 </div>
               </div>
               <p>Short description of the project. Just a couple sentences will do.</p>
